--- a/lab.css
+++ b/lab.css
@@ -523,6 +523,10 @@ body.close .content {
     transition: transform 250ms ease-out, -webkit-transform 250ms ease-out;
   }
 
+.sidebar ul.app-sub-sidebar li {
+    line-height: 1em;
+}
+
   .content {
     left: 0;
     max-width: 100vw;
@@ -806,6 +810,7 @@ body {
 .markdown-section h2 {
   font-size: 1.75rem;
   margin: 45px 0 0.8rem;
+  text-align: right;
 }
 
 .markdown-section h3 {
